v2.8.1   - Improved playback of movies sometimes when pts was skipping
	   a frame.
	 - Minor speeding up in movie playback.
	 - Bug fixed playback of image sequences with attached sound,
	   which would freeze on a frame.

v2.8.0   - Bug fixed playback in reverse to not use so much memory.
	 - Retrofit previous algorithm for movie playback as new 
	   algorithm was not frame accurate.
	 - Bug fixed playback of one sample movie (PoTC.VOB), which
	   would start with frame frozen.
	 - Bug fixed movies that had B frames in it and would show 
	   incorrectly.

v2.7.9   - Bug fixed start frame on BG image, which would offset by 1 
	   frame.
	 - Added display of FG and BG images to title bar.  Previously,
	   this would only be used when edl was on.
	 - Improved performance of seek in video playback and scrubbing.
	 - Improved performance of reverse playback.
	 - Reverse playback is now frame accurate, instead of being
	   shifted by one frame.

v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.
	 - Fixed file requester not showing negative frames correctly.
	 - Fixed file association for jpg, png, tiff, and others on Linux 
	   installers.
	 - Fixed ImageMagick saving.  Gamma is baked in instead of passed
	   to image attribute.
	 - Made ImageMagick loader load all images as gamma 1.0, 
	   regardless, as it incorrectly tags images as gamma 0.4545.
	 - Fixed Clone Image crash due to wrong path check.
	 - Fixed Clone Image not cloning CTL's IDT transform.
	 - Internal images like SMPTE color bars don't start with a RRT.
	 - When saving, if LUT is active, ACES Metadata saving is turned 
	   on. If LUT is not active, ACES Metadata is turned off.

v2.7.7   - Clamped values of ITU 709 as it could result in overflows and
	   saturated colors.
	 - Windows64 version of mrViewer was distributed with 16bits
	   ImageMagick instead of 32 bits HDRI.
	 - Added sun raster images to mime types under Linux.