@@ -1,0 +1,48 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_Monitor_Menu"></a><span style="text-decoration: underline;">The Monitor Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="menu_monitor.png" src="images/Menus_Monitor.png" hspace="20">
+
+<br>
+<br>
+The monitor menu allows attaching a CTL Output Display Transform to complete the ACES workflow.  The Output Display Transform emulates the device the image is going to be seen in.  It is usually some monitor but it can be a film emulation transform.
+<br>
+<br>
+The monitor menu also supports adding an ICC Monitor Profile.  In that case, the monitor profile is to accept an image in XYZ as input and the output can be anything like sRGB.  With the advent of ACES CTL, this option is deprecated.
+<br>
+<br>
+
+
+
+</body>
+</html>
