@@ -1,0 +1,57 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_File_Save"></a><span style="text-decoration: underline;">The File Save Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="file_save.png" src="images/Menus_File_Save.png" hspace="20">
+
+<br>
+<br>
+The File Save menu allows you to save a movie file or a sequence of images.
+<br>
+<br>
+The Reel As option allows saving the Reel as a simple EDL.
+<br>
+<br>
+The Frame as allows you to save a single image.
+<br>
+<br>
+The GL Snapshot As allows you to save a single snapshot of your opengl view.  This saves the annotations, for example, but it may not respect the image's original size.
+<br>
+<br>
+And it allows to save the ACES CTL transforms applied for LUT management as an ACES Clip XML Metadata file..
+<br>
+<br>
+
+
+
+</body>
+</html>
